packages/next-swc/crates/core/tests/errors/next-font-loaders/not-named-import/input.js
import * as googleFonts from '@next/font/google'
import coolFonts, { inter } from 'cool-fonts'
